--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,6 @@
     {
       "src": "server/index.ts",
       "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
     }
   ],
   "routes": [
@@ -19,14 +12,13 @@
       "dest": "/server/index.ts"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/dist/assets/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/dist/index.html"
+      "dest": "/client/index.html"
     }
   ],
+  "installCommand": "npm install",
+  "buildCommand": "cd client && npx vite build --outDir ../dist && cd .. && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=api",
+  "outputDirectory": "dist",
   "env": {
     "NODE_ENV": "production"
   }
