--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
     {
       "src": "server/index.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/public"
+      }
     }
   ],
   "routes": [
@@ -12,13 +19,14 @@
       "dest": "/server/index.ts"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/client/index.html"
+      "dest": "/index.html"
     }
   ],
-  "installCommand": "npm install",
-  "buildCommand": "cd client && npx vite build --outDir ../dist && cd .. && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=api",
-  "outputDirectory": "dist",
   "env": {
     "NODE_ENV": "production"
   }
