--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,4 @@
 {
-  "version": 2,
-  "buildCommand": "npx vite build --config vite.config.ts && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=api",
-  "outputDirectory": "dist/public",
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "buildCommand": "npx vite build --config vite.config.ts",
+  "outputDirectory": "dist/public"
 }
